<resources>

    <!-- Generic -->
    <string name="home_banner">Stocks</string>
    <string name="welcome_home">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="enter_ticker">Enter a Ticker</string>
    <string name="search">Search</string>

    <!-- Generic texts -->
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>

    <!-- Search Page -->
    <string name="recently_searched">Recently Viewed</string>


    <!-- Individual stock page -->
    <string name="company_name_default">Company Name</string>
    <string name="company_ticker_default">Ticker</string>
    <string name="num_shares_default"># of Desired Shares</string>
    <string name="stock_num_default">$0.00</string>
    <string name="stock_percent_default">+1.0</string>
    <string name="stock_price_label">Price: </string>
    <string name="stock_change_label">Change: </string>
    <string name="stock_day_high_label">Day High: </string>
    <string name="stock_day_low_label">Day Low: </string>
    <string name="stock_year_high_label">Year High: </string>
    <string name="stock_year_low_label">Year Low: </string>
    <string name="stock_market_capitalization_label">Market Cap: </string>
    <string name="stock_volume_label">Volume: </string>



    <!-- Profit Loss page -->
    <string name="investment_total_text">Investment Total:</string>
    <string name="investment_total_default_num">$0.00</string>
    <string name="total_pl_text">Total Profit/Loss:</string>
    <string name="total_pl_default_num">$0.00</string>


</resources>
