<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/greeting_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin_x2"
        android:layout_marginTop="@dimen/activity_vertical_margin_x1.5"
        android:text="@string/sign_up"
        android:textSize="@dimen/large_text_size"
        />

    <EditText
        android:id="@+id/username_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/greeting_sign_up"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_x2"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textColorHint="@color/hintTextColor"
        />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_sign_up"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_x2"
        android:layout_marginTop="@dimen/activity_vertical_margin_x1.5"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textColorHint="@color/hintTextColor"/>

    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_sign_up"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_x2"
        android:layout_marginTop="@dimen/activity_vertical_margin_x1.5"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textColorHint="@color/hintTextColor"
        />

    <EditText
        android:id="@+id/confirm_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_sign_up"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_x2"
        android:layout_marginTop="@dimen/activity_vertical_margin_x1.5"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:maxLines="1"
        android:textAllCaps="false"
        android:textColorHint="@color/hintTextColor"/>

    <Button
        android:id="@+id/create_button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_x3"
        android:background="@drawable/green_rounded_button"
        android:text="@string/create"
        android:textColorHint="@color/hintTextColor"/>

</RelativeLayout>