<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/company_stock_ticker_IS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        android:text="@string/company_ticker_default"/>

    <TextView
        android:id="@+id/company_name_IS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_stock_ticker_IS"
        android:layout_centerHorizontal="true"
        android:text="@string/company_name_default"/>

    <RelativeLayout
        android:id="@+id/numbers_IS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_name_IS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2">

        <TextView
            android:id="@+id/stock_price_IS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_price_default"
            />

        <TextView
            android:id="@+id/stock_percent_IS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_sides_x2"
            android:layout_toRightOf="@id/stock_price_IS"
            android:text="@string/stock_percent_default"/>
    </RelativeLayout>
</RelativeLayout>