<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_text_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        android:text="@string/sign_in"
        android:textSize="@dimen/large_text_size"/>

    <RelativeLayout
        android:id="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text_frag"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2">

        <EditText
            android:id="@+id/email_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:maxLines="1"
            android:textColorHint="@color/hintTextColor"
            />

        <EditText
            android:id="@+id/password_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_si"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="25"
            android:maxLines="1"
            android:textColorHint="@color/hintTextColor"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons_text_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_text_login"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/spacing_sides"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        >

        <TextView
            android:id="@+id/sign_in_button_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/cancel_button_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_spacing"
            android:layout_toRightOf="@id/sign_in_button_si"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>

</RelativeLayout>